[gd_scene load_steps=11 format=3 uid="uid://bcc3pe48h2wb8"]

[ext_resource type="PackedScene" uid="uid://cgqyilfj4ggfa" path="res://scenes/menu/MenuBackground.tscn" id="1_j1a2p"]
[ext_resource type="Script" uid="uid://hk7dh5tm8rt5" path="res://src/menu/multiplayer_game_lobby/MultiplayerNameInputValidator.gd" id="2_jxhed"]
[ext_resource type="Script" uid="uid://c2ktjyu2rwdmb" path="res://src/menu/multiplayer_game_lobby/MultiplayerValidateIpAddress.gd" id="3_jxhed"]
[ext_resource type="PackedScene" uid="uid://1jf4yyijbnie" path="res://scenes/menu/multiplayer/MultiplayerLobby.tscn" id="4_osryj"]
[ext_resource type="Script" uid="uid://d0jkx58w1a850" path="res://src/menu/multiplayer_game_lobby/HostMultiplayerGame.gd" id="5_h86l2"]
[ext_resource type="Script" uid="uid://co2n040hy5hu4" path="res://src/menu/multiplayer_game_lobby/GameBroadcast.gd" id="6_c3rh4"]
[ext_resource type="Script" uid="uid://cjad7cr753o0w" path="res://src/menu/multiplayer_game_lobby/BroadcastServerList.gd" id="6_g4ywp"]
[ext_resource type="PackedScene" uid="uid://bg3c8ubx25e01" path="res://scenes/menu/multiplayer/ServerEntry.tscn" id="7_8t68q"]
[ext_resource type="Shortcut" uid="uid://2i2jk61uyyn2" path="res://assets/shortcuts/Abort.tres" id="8_yw5u2"]
[ext_resource type="Script" uid="uid://b1uyki8ha85d7" path="res://src/game/overlay/FinishGameOk.gd" id="9_jrweh"]

[node name="MultiplayerStart" type="CanvasLayer"]

[node name="MenuBackground" parent="." instance=ExtResource("1_j1a2p")]

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(750, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -42.0
offset_right = 36.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MultiplayerNameInputValidator" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "PLAYER_NAME"
script = ExtResource("2_jxhed")
is_focused = true
metadata/_custom_type_script = "uid://hk7dh5tm8rt5"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "AVAILABLE_SERVERS"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer" node_paths=PackedStringArray("timer_target_node")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_g4ywp")
server_entry_template = ExtResource("7_8t68q")
timer_target_node = NodePath("../../../../GameBroadcast")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MultiplayerValidateIpAddress" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "SERVER_ADDRESS"
script = ExtResource("3_jxhed")
metadata/_custom_type_script = "uid://c2ktjyu2rwdmb"

[node name="Connect" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "CONNECT_TOOLTIP"
text = "CONNECT"
script = ExtResource("5_h86l2")
game_lobby_template = ExtResource("4_osryj")
is_connect_button = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "HOST_TOOLTIP"
text = "HOST"
script = ExtResource("5_h86l2")
game_lobby_template = ExtResource("4_osryj")

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "CLOSE_TOOLTIP"
shortcut = ExtResource("8_yw5u2")
text = "CLOSE"
script = ExtResource("9_jrweh")

[node name="GameBroadcast" type="Node" parent="."]
script = ExtResource("6_c3rh4")
is_receiver = true
metadata/_custom_type_script = "uid://co2n040hy5hu4"

[connection signal="text_changed" from="PanelContainer/VBoxContainer/MultiplayerNameInputValidator" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="name_updated"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/MultiplayerNameInputValidator" to="PanelContainer/VBoxContainer/HBoxContainer2/Host" method="name_updated"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/MultiplayerNameInputValidator" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="name_updated"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/MultiplayerNameInputValidator" to="PanelContainer/VBoxContainer/HBoxContainer2/Host" method="name_updated"]
[connection signal="address_requested" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="ip_updated"]
[connection signal="connection_triggered" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="_pressed"]
[connection signal="got_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/MultiplayerValidateIpAddress" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="_pressed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/MultiplayerValidateIpAddress" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="ip_updated"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/MultiplayerValidateIpAddress" to="PanelContainer/VBoxContainer/HBoxContainer/Connect" method="ip_updated"]
[connection signal="server_information_received" from="GameBroadcast" to="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" method="server_found"]
